<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="5sp"
        android:layout_marginEnd="5sp"
        android:layout_marginBottom="5sp"
        android:padding="25sp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="45sp"
            android:text="@string/firstname" />

        <EditText
            android:id="@+id/txtfname"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false" />

    </LinearLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:layout_marginTop="60sp"
        android:layout_marginEnd="5sp"
        android:layout_marginBottom="5sp"
        android:padding="25sp">

        <TextView
            android:id="@+id/tvfname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="45sp"
            android:text="@string/lastname" />

        <EditText
            android:id="@+id/txtlname"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:layout_marginTop="115sp"
        android:layout_marginEnd="5sp"
        android:layout_marginBottom="5sp"
        android:padding="25sp">

        <TextView
            android:id="@+id/tvemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25sp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/txtemail"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="false" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:layout_marginTop="180sp"
        android:layout_marginEnd="5sp"
        android:layout_marginBottom="5sp"
        android:padding="25sp">

        <Button
            android:id="@+id/btnUpdateProfile"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
              android:background="@color/colorPrimary"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"

            android:text="@string/updateprofile"
            android:textColor="#FFFFFF" />

    </LinearLayout>


</RelativeLayout>